kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  ports:
    - port: 80 # Where the services will serve on
      targetPort: 80 # The port on the container
      nodePort: 30007 # The static port on the nodes where the service will be available
  selector:
    app: nginx
